Fixed Bug related to submit button

--- a/MVC_JQUERY_INSERT_DISPLAY_PRACTICE_01/Views/Student/StudentForm.cshtml
+++ b/MVC_JQUERY_INSERT_DISPLAY_PRACTICE_01/Views/Student/StudentForm.cshtml
@@ -113,6 +113,7 @@
                     alert("Changes has been saved Successfully!");
                     SHOW();
                     CLEAR_FORM();
+                    $("#Submit_txt").val("Submit");
                 },
                 error: function () {
                     alert("Something went wrong!");
